--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="wrapper">
         <header class="slider gallery">
             <div class="photos">
-                <div class="block block-1 active">1</div>
-                <div class="block block-2">2 </div>
-                <div class="block block-3">3</div>
+                <div class="block block-1 active"><img src="https://jssorcdn7.azureedge.net/demos/img/gallery/980x380/001.jpg" alt=""> </div>
+                <div class="block block-2"><img src="https://jssorcdn7.azureedge.net/demos/img/gallery/980x380/002.jpg" alt=""> </div>
+                <div class="block block-3"><img src="https://jssorcdn7.azureedge.net/demos/img/gallery/980x380/003.jpg" alt=""></div>
             </div>
             <div class="buttons">
                 <a class="prev" href="#">
@@ -113,7 +113,6 @@
             </ul>
         </aside>
     </div>
-    <!-- <script defer="" src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
     <script src="js/data.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/pagination.js"></script>
