correccion de css

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <div class="wrapper">
         <header class="slider gallery">
             <div class="photos">
-                <div class="block block-1 active"><img src="https://jssorcdn7.azureedge.net/demos/img/gallery/980x380/001.jpg" alt=""> </div>
-                <div class="block block-2"><img src="https://jssorcdn7.azureedge.net/demos/img/gallery/980x380/002.jpg" alt=""> </div>
-                <div class="block block-3"><img src="https://jssorcdn7.azureedge.net/demos/img/gallery/980x380/003.jpg" alt=""></div>
+                <div class="block block-1 active"><img src="https://jssorcdn7.azureedge.net/demos/img/gallery/980x380/001.jpg"
+                        alt=""> </div>
+                <div class="block block-2"><img src="https://jssorcdn7.azureedge.net/demos/img/gallery/980x380/002.jpg"
+                        alt=""> </div>
+                <div class="block block-3"><img src="https://jssorcdn7.azureedge.net/demos/img/gallery/980x380/003.jpg"
+                        alt=""></div>
             </div>
             <div class="buttons">
                 <a class="prev" href="#">
@@ -51,25 +54,39 @@
             <ul class="sidebar--widgets">
                 <li class="widget green">
                     <h2>Lorem</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et arcu leo. In viverra rutrum
-                        nisl, vitae tincidunt nibh accumsan et. Integer ac rutrum odio. Etiam viverra bibendum molestie.
-                        Suspendisse nec lectus in urna ornare faucibus. Quisque ipsum dolor, ullamcorper non ante non, congue
-                        mollis libero. Pellentesque condimentum velit at sem suscipit, vel tempus elit scelerisque. Nunc
-                        in egestas augue, a tincidunt tellus. Sed in ullamcorper nibh. In et purus in mauris congue convallis.
-                        Donec consequat dignissim condimentum. Integer enim libero, porttitor eu nibh id, pulvinar hendrerit
-                        odio. Vivamus auctor ut dolor quis porttitor. Curabitur erat nisi, accumsan nec sollicitudin vitae,
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et arcu leo. In viverra
+                        rutrum
+                        nisl, vitae tincidunt nibh accumsan et. Integer ac rutrum odio. Etiam viverra bibendum
+                        molestie.
+                        Suspendisse nec lectus in urna ornare faucibus. Quisque ipsum dolor, ullamcorper non ante non,
+                        congue
+                        mollis libero. Pellentesque condimentum velit at sem suscipit, vel tempus elit scelerisque.
+                        Nunc
+                        in egestas augue, a tincidunt tellus. Sed in ullamcorper nibh. In et purus in mauris congue
+                        convallis.
+                        Donec consequat dignissim condimentum. Integer enim libero, porttitor eu nibh id, pulvinar
+                        hendrerit
+                        odio. Vivamus auctor ut dolor quis porttitor. Curabitur erat nisi, accumsan nec sollicitudin
+                        vitae,
                         bibendum eget quam.</p>
                 </li>
 
                 <li class="widget light">
                     <h2>Lorem Ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et arcu leo. In viverra rutrum
-                        nisl, vitae tincidunt nibh accumsan et. Integer ac rutrum odio. Etiam viverra bibendum molestie.
-                        Suspendisse nec lectus in urna ornare faucibus. Quisque ipsum dolor, ullamcorper non ante non, congue
-                        mollis libero. Pellentesque condimentum velit at sem suscipit, vel tempus elit scelerisque. Nunc
-                        in egestas augue, a tincidunt tellus. Sed in ullamcorper nibh. In et purus in mauris congue convallis.
-                        Donec consequat dignissim condimentum. Integer enim libero, porttitor eu nibh id, pulvinar hendrerit
-                        odio. Vivamus auctor ut dolor quis porttitor. Curabitur erat nisi, accumsan nec sollicitudin vitae,
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et arcu leo. In viverra
+                        rutrum
+                        nisl, vitae tincidunt nibh accumsan et. Integer ac rutrum odio. Etiam viverra bibendum
+                        molestie.
+                        Suspendisse nec lectus in urna ornare faucibus. Quisque ipsum dolor, ullamcorper non ante non,
+                        congue
+                        mollis libero. Pellentesque condimentum velit at sem suscipit, vel tempus elit scelerisque.
+                        Nunc
+                        in egestas augue, a tincidunt tellus. Sed in ullamcorper nibh. In et purus in mauris congue
+                        convallis.
+                        Donec consequat dignissim condimentum. Integer enim libero, porttitor eu nibh id, pulvinar
+                        hendrerit
+                        odio. Vivamus auctor ut dolor quis porttitor. Curabitur erat nisi, accumsan nec sollicitudin
+                        vitae,
                         bibendum eget quam.</p>
                 </li>
 
